<resources>
    <string name="app_name">CMAS</string>
    <string name="debug_key">AIzaSyBOs3hgNjuJ3f6LMGH_1ml9XOUO4703k0s</string>
    <string name="release_key">AIzaSyCG-zflBvuu9dXCYZ7ZgOabTNXFO3kGkTw</string>
    <string name="forward">Next</string>
    <string name="country">Country</string>
    <string name="select_country">Select Country</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Dob</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="new_password">new password</string>
    <string name="repeat_password">Confirm Password</string>
    <string name="reg_username_text">To register, enter the username and enter the password twice</string>
    <string name="reg_mobile_text">To register, enter the password twice</string>
    <string name="reg_pass_advice">The password must contain numbers and letters mixed case</string>
    <string name="password_mismatch_error">The entered passwords do not match</string>
    <string name="back">Back</string>
    <string name="wait_text">Wait for a</string>
    <string name="error_connecting_to_server">Error connecting to server</string>
    <string name="registration_success">Registration is successful</string>
    <string name="terms_not_agreed">You do not agree to the terms of the application</string>
    <string name="error">Error</string>
    <string name="fatal_error">An error has occurred. Restart the application.</string>
    <string name="search_txt">Search</string>
    <string name="back_to_main">The main menu</string>
    <string name="forgot_password_main">Forgot your password?</string>
    <string name="expand">Expand</string>
    <string name="login_enter">Login</string>
    <string name="login_register">Register</string>
    <string name="caps_login_register">Sign in</string>
    <string name="do_register">Register</string>
    <string name="caps_do_register">Register</string>
    <string name="login_no_register">Without registration</string>
    <string name="find">GET</string>
    <string name="wrong_password">Invalid password</string>
    <string name="user_already_exists">This user is already registered</string>
    <string name="logout">Exit</string>
    <string name="username_input_error">The user name must contain only Latin characters
                digits, and underscores
    </string>
    <string name="password_empty_error">Enter password</string>
    <string name="enter_new_profile">Enter the profile name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create_new_profile">Create a new profile</string>
    <string name="back_to_profiles">Back to the profile</string>
    <string name="profiles">profiles</string>
    <string name="profiles_hint">Profiles</string>
    <string name="no_network_error">This functionality is not available without the inclusion of the network</string>
    <string name="no_such_directive">direction with a given number you found to a specified laboratory</string>
    <string name="profile_already_exists">This profile name is already with you. Or does it have a different user
                who has access to the profile you are trying to rename
    </string>
    <string name="error_profile_management">Error during operation with a profile</string>
    <string name="no_such_user">This diver is not registered</string>
    <string name="rename">rename</string>
    <string name="new_profile_name">a new profile name</string>
    <string name="bind">to access</string>
    <string name="delete_profile_question">Are you sure you want to permanently delete this profile and all data on the
                server?
    </string>
    <string name="delete_profile">delete a profile</string>
    <string name="unbind_profile">delete</string>
    <string name="unbind_profile_question">Are you sure you want to remove the profile from the device and stop
                receive data from this profile?
    </string>
    <string name="user_is_already_the_owner">This user already has access to this profile</string>
    <string name="is_not_the_owner">You do not have access to this profile</string>
    <string name="error_profile_name_empty">profile name can not be empty</string>
    <string name="error_new_name_equals_old">The new name is the same as the old</string>
    <string name="error_username_empty">User Name can not be empty</string>
    <string name="enter_code_4_digit">Enter the 4-digit code</string>
    <string name="restore_app">Restores</string>
    <string name="code_4_digit">4-digit code</string>
    <string name="confirm">CONFIRM</string>
    <string name="repeat_code">Repeat code</string>
    <string name="email">email</string>
    <string name="email_txt">You can specify your email address here to be able to restore the code, login
                and password
    </string>
    <string name="add_code_header_caps">Screen lock</string>
    <string name="notifications">Notifications</string>
    <string name="message_icon_description">Icon messages in the notification bar</string>
    <string name="notification_icon_description">Icon notification in the notification bar</string>
    <string name="numbers_for_test">23</string>
    <string name="save_caps">SAVE</string>
    <string name="save">Save</string>
    <string name="add_new_profile_caps">add a profile</string>
    <string name="user_account_title_caps">YOUR ACCOUNT</string>
    <string name="user_userpic_icon">Photos by</string>
    <string name="select_userpic">Select Userpic</string>
    <string name="select_userpic_caps">SELECT USERPIC</string>
    <string name="enter_user_name_hint">Enter the profile name</string>
    <string name="enter_oms_hint">Enter policy OMC</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="date_birthday_hint">Date of Birth</string>
    <string name="date_birthday_format">Date of birth. {0}</string>
    <string name="add_access">Add access rights</string>
    <string name="barcode_image_description">image of the bar code</string>
    <string name="add_code_header">Lock Screen</string>
    <string name="code_mismatch_error">entered codes do not match</string>
    <string name="code_error">code must be 4 digits</string>
    <string name="add_email_header">set email</string>
    <string name="email_error">invalid email</string>
    <string name="code_enter_header">enter the code</string>
    <string name="wrong_code">invalid code</string>
    <string name="saved_successfully">Data successfully saved</string>
    <string name="settings">Settings</string>
    <string name="exit">Out</string>
    <string name="settings_title">SET</string>
    <string name="view">look</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="qr_code_error">Failed to create a bar code</string>
    <string name="profile_operations_title">Operations with the profile</string>
    <string name="add_new_profile">Add new profile</string>
    <string name="add_new_profile_title">Add new profile</string>
    <string name="add">Add</string>
    <string name="bind_profile_title">Allow</string>
    <string name="barcode">Barcode</string>
    <string name="qr_code_title">CARD NUMBER</string>
    <string name="delete_profile_title">Remove all</string>
    <string name="unbind_profile_title">Remove from the device</string>
    <string name="rename_profile_title">Rename profile</string>
    <string name="clear_code">Clear the code</string>
    <string name="submit_code">Set code</string>
    <string name="email_hint">To restore the code, specify the email</string>
    <string name="add_email">Specify the email</string>
    <string name="clear_all">Reset</string>
    <string name="clear_all_question">Are you sure you want to delete all local data and reset all settings
                application?
    </string>
    <string name="cv_next">Next</string>
    <string name="cv_alert">Warning</string>
    <string name="cv_file_name">Filename</string>
    <string name="cv_save">Save</string>
    <string name="cv_parent_directory">Parent Folder</string>
    <string name="cv_file_name_empty_alert">The file name must not be empty</string>
    <string name="cv_choose">Select</string>
    <string name="cv_create_folder">New Folder</string>
    <string name="cv_no">No</string>
    <string name="change">Edit</string>
    <string name="menu">Menu</string>
    <string name="fav">Mark</string>
    <string name="ticket">Coupon</string>
    <string name="add_calendar_event">Calendar reminder</string>
    <string name="messages">Messages</string>
    <string name="personal_info">My Account</string>
    <string name="select_all">Select All</string>
    <string name="hide">Hide</string>
    <string name="set_as_read">Mark All Read</string>
    <string name="logbook">Logbook</string>
    <string name="logbook_title">LOGBOOK</string>
    <string name="my_account_title">MY ACCOUNT</string>
    <string name="current_user_select">Selecting the current user</string>
    <string name="profile_change_alert">Warning! You will now see the profile:</string>
    <string name="dynamic">Dynamic</string>
    <string name="about_parameter">About parameter</string>
    <string name="check">Select</string>
    <string name="loading_complete">Download complete</string>
    <string name="loading">Loading …</string>
    <string name="loading_dictionaries_complete">The dictionary data is loaded</string>
    <string name="loading_dictionaries">Load the dictionary data </string>
    <string name="authorization_attempt">Authorization</string>
    <string name="loading_logbook">Loading Logbook</string>
    <string name="doc_aux_data">MORE INFORMATION</string>
    <string name="doc_type_title">Document Type</string>
    <string name="doc_date_title">Date</string>
    <string name="doc_author_title">Author</string>
    <string name="doc_directive_number_title">№ Order</string>
    <string name="added_files_title">attached file</string>
    <string name="doc_edit_title">Edit Document</string>
    <string name="doc_delete_title">Deleting the document</string>
    <string name="doc_desc_title">FULL DESCRIPTION</string>
    <string name="doc_delete_question">Are you sure you want to delete this document?</string>
    <string name="add_new_document">Add Document</string>
    <string name="new_logbook_entry_title_caps">ADDING NEW LOGBOOK ENTRY</string>
    <string name="doc_common_info">BACKGROUND</string>
    <string name="doc_name">Name</string>
    <string name="description">Description</string>
    <string name="dive_score">Dive score</string>
    <string name="date">Date</string>
    <string name="hospitalization_from">Home hospitalization</string>
    <string name="hospitalization_till">End of the admission</string>
    <string name="doc_attach_file_title">Attach file</string>
    <string name="doc_attach_file_title_caps">Attach file</string>
    <string name="error_add_file_to_doc">error in the file attachment to the document</string>
    <string name="parameters_caps">OPTIONS</string>
    <string name="doc_attach_parameter_title">Add option</string>
    <string name="add_parameter_caps">add parameters</string>
    <string name="search_parameter">Search option</string>
    <string name="delete_parameter">Delete option</string>
    <string name="add_caps">ADD</string>
    <string name="comments_caps">NOTES</string>
    <string name="doc_description">Description</string>
    <string name="error_doc_name_empty">The document name can not be empty</string>
    <string name="add_email_caps">INSERT EMAIL</string>
    <string name="dive_spot_name_hint">Diving spot name</string>
    <string name="choose_spot">Choose this spot</string>
    <string name="create_new_diving_spot">Create new diving spot</string>
</resources>