<?xml version="1.0" encoding="utf-8"?>
<org.cmas.tags.BaseLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/registration_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caps_login_register"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/turquoise"
                android:textStyle="bold"
                android:textSize="19sp"/>

        <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                android:prompt="@string/select_country"
                />

        <EditText
                android:id="@+id/first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/first_name"
                android:drawableStart="@drawable/login_icon"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"/>

        <EditText
                android:id="@+id/last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:singleLine="true"
                android:inputType="text"
                android:hint="@string/last_name"
                android:drawableStart="@drawable/login_icon"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                android:layout_marginLeft="@dimen/margin_from_screen_borders"
                android:layout_marginRight="@dimen/margin_from_screen_borders"
                android:orientation="horizontal"
                android:gravity="center">
            <ImageButton
                    android:id="@+id/set_date_of_birthday_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/calendar_icon"
                    style="@style/Helter.Button"
                    android:background="@drawable/image_button_bkg"
                    android:contentDescription="@string/calendar_icon"/>
            <EditText
                    android:id="@+id/date_of_birthday_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/space_between_views"
                    android:textStyle="normal"
                    android:hint="@string/date_birthday_hint"
                    android:enabled="false"/>
        </LinearLayout>

        <Button
                android:id="@+id/bnt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/caps_do_register"/>
    </LinearLayout>
</org.cmas.tags.BaseLayout>
