<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:background="@drawable/dialog_bkg">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_screen_borders"
            android:layout_marginBottom="@dimen/margin_from_screen_borders"
            style="@style/Helter.Title"
            android:text="@string/add_email_caps"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_gray"/>

    <EditText
            android:id="@+id/email_edit"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_from_screen_borders"
            android:layout_marginRight="@dimen/margin_from_screen_borders"
            android:layout_marginTop="@dimen/space_between_views"
            android:hint="@string/email"
            android:textStyle="normal"
            android:singleLine="true"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_from_screen_borders"
            android:layout_marginRight="@dimen/margin_from_screen_borders"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/space_between_views">

        <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Helter.Button.Gray"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_between_views"
                style="@style/Helter.Button.Orange"
                android:text="@string/save_caps"/>

    </LinearLayout>

</LinearLayout>